--- a/PerfectOCR/config/master_config.yaml
+++ b/PerfectOCR/config/master_config.yaml
@@ -58,44 +58,6 @@ image_preparation:
         height_thresholds_px: [800, 1500, 2500]
         block_sizes_map: [21, 25, 35, 41]
         
-    # NUEVA SECCIÓN PARA EL ANALIZADOR ESPACIAL
-    spatial_analysis:
-      denoise:
-        sharpness_thresholds: [50.0, 100.0]
-        strengths_map: [5, 3, 1] # Denoise muy suave para no romper líneas
-      contrast_enhancement:
-        clahe_clip_limit: 1.0
-        dimension_thresholds_px: [1000, 2500]
-        grid_sizes_map: [[8, 8], [10, 10], [12, 12]]
-      binarization:
-        # Parámetros para hacer las líneas estructurales lo más sólidas posibles
-        adaptive_c_value: 5
-        height_thresholds_px: [800, 1500, 2500]
-        # Bloques más pequeños para capturar detalles finos de las líneas
-        block_sizes_map: [15, 21, 25, 31]
-
-spatial_analyzer:
-  optimization:
-    max_workers: 2                    # Máximo 2 hilos para análisis espacial
-    use_integral_image: true          # Para ventanas de densidad grandes
-    use_scharr_gradients: true        # Operador Scharr más preciso
-    enable_caching: true              # Cache de resultados intermedios
-    cache_size_mb: 100               # Tamaño máximo de cache
-  
-  performance:
-    density_map_window_size: 23       # Mantener calidad
-    gradient_threshold_multiplier: 1.5 # Mantener precisión
-
-  # MODO SENCILLO → Solo detectar las líneas horizontales que generan ruido.
-  ocr_noise_filtering:
-    enabled: true
-    method: gradient   # Detector basado solo en gradiente
-
-    # --- PARÁMETROS MÍNIMOS NECESARIOS ---
-    gradient_percentile_threshold: 95.0  # Sensibilidad (porcentil superior)
-    min_line_length_ratio: 0.05          # Descarta trazos demasiado cortos
-    expansion_factor: 3.0               # Cuánto expandir la máscara verticalmente
-
 ocr:
   enabled_engines:
     tesseract: false    # Cambiar a false para deshabilitar Tesseract
@@ -287,8 +249,12 @@ text_cleaning:
   enabled: true
   low_confidence_threshold: 95.0
   use_embeddings: true
-  embedding_model: "paraphrase-multilingual-MiniLM-L12-v2"
+  embedding_model: "all-MiniLM-L6-v2"
   anomaly_threshold: 0.4
+  enable_embedding_cache: true
+  cache_max_size: 500
+  batch_processing: true
+  max_batch_size: 16
 
 postprocessing:
   text_correction:
@@ -323,17 +289,17 @@ postprocessing:
 
 output_config:
   enabled_outputs:
-    ocr_raw: true                         # Resultados directos del OCR
+    ocr_raw: false                        # Resultados directos del OCR
     reconstructed_lines: false             # Líneas reconstruidas
-    cleaned_lines: true                   # Líneas limpias
-    table_body_lines: true                # Líneas de texto de tabla 
+    cleaned_lines: false                   # Líneas limpias
+    table_body_lines: false                # Líneas de texto de tabla 
     structured_table: true                # Output de geo_matrix
-    semantically_corrected_matrix: false   # Matriz del semantic corrector
-    semantic_consistency_matrix: false     # Matriz después de la corrección de consistencia semántica
+    semantically_corrected_matrix: true   # Matriz del semantic corrector
+    semantic_consistency_matrix: true     # Matriz después de la corrección de consistencia semántica
     math_max_matrix: true    # Matriz final después de math_max
-    ml_training_data: true                # Datos para ML
-    debug_semantic_matrix: false           # Para depuración
-    ground_truth_excel: true              # Excel consolidado
+    ml_training_data: false                # Datos para ML
+    debug_semantic_matrix: true           # Para depuración
+    ground_truth_excel: false              # Excel consolidado
 
 batch_processing:
   small_batch_limit: 5
